News UAT/force-app/main/default/objects/Portfolio_Staging__c/Portfolio_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging table for loading Portfolio details and its Owners from Phoenix BI tool.</description>
    <label>Portfolio Staging</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Portfolio Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>