News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Conformed_Owner__c.field-meta.xml
<CustomField>
    <fullName>Conformed_Owner__c</fullName>
    <label>Conformed Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>