News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <label>Group Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>