News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Master_Owner__c.field-meta.xml
<CustomField>
    <fullName>Master_Owner__c</fullName>
    <label>Master Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>