News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Name__c</fullName>
    <label>Portfolio Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>