News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Portfolio_Name_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Name_Owner__c</fullName>
    <description>Username derived from the active directory</description>
    <label>Portfolio Name Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>