News UAT/force-app/main/default/objects/Portfolio_Staging__c/fields/Portfolio_Segment__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Segment__c</fullName>
    <label>Portfolio Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Con</fullName>
            </value>
            <value>
                <fullName>IMA</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>