News UAT/force-app/main/default/objects/Portfolio_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portfolio_Code__c</columns>
    <columns>Portfolio_Name__c</columns>
    <columns>Portfolio_Name_Owner__c</columns>
    <columns>Portfolio_Segment__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_Owner__c</columns>
    <columns>Sub_Master_Name__c</columns>
    <columns>Sub_Master_Owner__c</columns>
    <columns>Master_Name__c</columns>
    <columns>Master_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>